--- a/src/preview/index.html
+++ b/src/preview/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
-    <title>Tailor content element</title>
+    <title>TCE Template Vue</title>
   </head>
   <body>
+    <noscript>
+      <strong>We're sorry but tce-template-vue doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
     <div id="app"></div>
     <script type="module" src="/main.ts"></script>
   </body>
